argocd/apps/media-server/calibre/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: calibre-dl
  name: calibre-dl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calibre-dl
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: calibre-dl
    spec:
      nodeSelector:
        beta.kubernetes.io/arch: amd64
      containers:
        - env:
            - name: FLASK_PORT
              value: "8084"
            - name: FLASK_DEBUG
              value: 'false'
            - name: CLOUDFLARE_PROXY_URL
              value: http://cloudflareproxy:8000
          image: ghcr.io/calibrain/calibre-web-automated-book-downloader:latest@sha256:8fe0b0eed52042a6847b7126dd9754afa07004b8edc1eeb41be461a5eb2afc52
          imagePullPolicy: IfNotPresent
          name: calibre-dl
          resources:
            limits:
              cpu: 250m
              memory: 500Mi
            requests:
              cpu: 50m
              memory: 100Mi
          ports:
            - containerPort: 8084
              protocol: TCP
          volumeMounts:
            - name: ingest
              mountPath: /cwa-book-ingest
          readinessProbe:
            httpGet:
              path: /
              port: 8084
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8084
            initialDelaySeconds: 60
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 5
      restartPolicy: Always
      volumes:
        - name: ingest
          persistentVolumeClaim:
            claimName: ingest
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: calibre
  name: calibre
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calibre
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: calibre
    spec:
      nodeSelector:
        beta.kubernetes.io/arch: amd64
      containers:
        - env:
            - name: PUID
              value: "1000"
            - name: PGID
              value: '1000'
            - name: TZ
              value: "America/Chicago"
            - name: DOCKER_MODS
              value: lscr.io/linuxserver/mods:universal-calibre-v7.16.0
          image: crocodilestick/calibre-web-automated:latest@sha256:e602e73b6fd50c3ba389b38acb701205976a05b650898f615f93bd7e3537a827
          imagePullPolicy: IfNotPresent
          name: calibre
          resources:
            limits:
              cpu: 1000m
              memory: 1Gi
            requests:
              cpu: 50m
              memory: 250Mi
          ports:
            - containerPort: 8083
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /config
            - name: ingest
              mountPath: /cwa-book-ingest
            - name: library
              mountPath: /calibre-library
          # readinessProbe:
          #   httpGet:
          #     path: /
          #     port: 8083
          #   initialDelaySeconds: 60
          #   periodSeconds: 30
          #   timeoutSeconds: 5
          #   failureThreshold: 10
          # livenessProbe:
          #   httpGet:
          #     path: /
          #     port: 8083
          #   initialDelaySeconds: 300
          #   periodSeconds: 15
          #   timeoutSeconds: 5
          #   failureThreshold: 5
      restartPolicy: Always
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: config
        - name: ingest
          persistentVolumeClaim:
            claimName: ingest
        - name: library
          persistentVolumeClaim:
            claimName: library
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cloudflareproxy
  name: cloudflareproxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloudflareproxy
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: cloudflareproxy
    spec:
      nodeSelector:
        beta.kubernetes.io/arch: amd64
      containers:
        - image: ghcr.io/sarperavci/cloudflarebypassforscraping:latest@sha256:6194ddd87a203585f0968b5516cc69445da0fce61c94c10f4b2aae72e67942b0
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: 1000m
              memory: 500Mi
            requests:
              cpu: 200m
              memory: 500Mi
          name: cloudflareproxy
          ports:
            - containerPort: 8000
              protocol: TCP
          readinessProbe:
            tcpSocket:
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            tcpSocket:
              port: 8000
            initialDelaySeconds: 60
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
      restartPolicy: Always
