argocd/apps/media-server/calibre/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: calibre
  name: calibre
  annotations:
    metallb.universe.tf/loadBalancerIPs: 10.10.8.2
spec:
  type: LoadBalancer
  ports:
    - name: "http"
      port: 8083
      targetPort: 8083
  selector:
    app: calibre
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: calibre-dl
  name: calibre-dl
spec:
  ports:
    - name: "http"
      port: 8084
      targetPort: 8084
  selector:
    app: calibre-dl
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cloudflareproxy
  name: cloudflareproxy
spec:
  ports:
    - name: "api"
      port: 8000
      targetPort: 8000
  selector:
    app: cloudflareproxy
