argocd/apps/media-server/calibre/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-0.4.0
  labels:
    app.kubernetes.io/instance: calibre-app
  name: calibre-httproute
  namespace: calibre
spec:
  parentRefs:
  - name: gateway-api
    namespace: istio-system
    sectionName: https
  hostnames:
  - calibre.yanello.net
  rules:
  - backendRefs:
    - name: calibre
      namespace: calibre
      port: 8083
      
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-0.4.0
  labels:
    app.kubernetes.io/instance: calibre-app
  name: calibre-dl-httproute
  namespace: calibre
spec:
  parentRefs:
  - name: gateway-api
    namespace: istio-system
    sectionName: https
  hostnames:
  - calibre-dl.yanello.net
  rules:
  - backendRefs:
    - name: calibre-dl
      namespace: calibre
      port: 8084
