argocd/apps/media-server/calibre/vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: calibre-vs
spec:
  hosts:
  - calibre.yanello.net
  gateways:
  - istio-system/kube-gateway
  http:
  - route:
    - destination:
        host: calibre
        port:
          number: 8083
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: calibre-dl-vs
spec:
  hosts:
  - calibre-dl.yanello.net
  gateways:
  - istio-system/kube-gateway
  http:
  - route:
    - destination:
        host: calibre-dl
        port:
          number: 8084
